fixes preview display for the different states (+4 squashed commits) Squashed commits: [7ceba57] concentrating some of the style declarations and fixing some text issues.  less padding on icons [0a25a19] removing comments [8fc64d1] Modified how icons are defined so that they may be applied to other elements via a mixin.  This makes it easier and more consistent to apply icon to elements. removed the display of captions for states where they are not applicable [8722ed3] Removed the state change code from the js scripts file and moved it into per-state LESS files.  Removed some icon defaults so that they can be changed based on the current state of the player ("jw-icon-inline jw-icon-play" => "jw-icon-inline jw-play-state-icon" and "jw-icon-display jw-icon-play" => "jw-icon-display")

--- a/src/css/imports/vars.less
+++ b/src/css/imports/vars.less
@@ -14,6 +14,7 @@
 @ui-corner-round: 0.5em;
 @ui-margin: 1.5em;
 @ui-padding: 0.25em;
+@control-padding: 0.1em;
 
 @display-hover-color: #f0f;
 
